# node-dmc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.sh  index.js  package.json  test.js
include/dmc/: dmc.cc  tree.hpp  vector.hpp  vector_base.hpp
